--- a/codigo_qr.html
+++ b/codigo_qr.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>qr_Playas-Verano-2023</title>
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <!--https://www.codigos-qr.com/en/qr-code-generator/-->
@@ -17,7 +17,7 @@
                 <img class="caja" src="https://www.codigos-qr.com/qr/php/qr_img.php?d=http%3A%2F%2Flaya82.infinityfreeapp.com%2FVerano-2022%2F&s=6&e=m" alt="QR Code generator"/>
                 
             </div>    
-            <h6 style=""><a href="http://laya82.infinityfreeapp.com/Verano-2022/" target="_blank" id="qrgenerator">Playas Verano-2022</a></h6> 
+            <h6 style=""><a href="http://laya82.infinityfreeapp.com/Verano-2022/" target="_blank" id="qrgenerator">Playas Verano-2023</a></h6> 
         </div>
 
             <!-- JavaScript Bundle with Popper -->
@@ -29,7 +29,7 @@
 
 
 <style>
-    .container{margin-top: 6em;}
+.container{margin-top: 6em;}
 .caja{border:1px solid #006293; border-radius: 5px;  margin: auto; padding:1em;
 background-color: #EFEFEF; margin-bottom: 1em; margin-top: 1em;
 box-shadow: inset 0px 0px 20px 4px #c1c1c1;}
